--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="./assets/css/style.css" />
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstr ap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -44,14 +45,64 @@
           </li>
         </ul>
       </div>
-      <div class="nav-profile justify-content-end"><a href=""><img src="assets/theme/Jenusa.png" alt="..."></a></div>
+      <div class="nav-profile justify-content-end"><a href=""><img src="#" alt="..."></a></div>
     </div>
   </nav>
 
   <div class="container">
-    <div class="Home mt-5 mb-5 pt-5 pb-5">
+    <div class="hero mt-5 mb-5 pt-5 pb-5">
+      <div class="row hero-content d-flex flex-row align-items-center">
+        <div class="col-md-6 left-content">
+          <h3 class="display-6">Let’s Get Exited<br>
+            About Relations And Functions !!!
+          </h3>
+          <p class="text-muted">Selamat datang di Math Edu, tempat paling keren di web untuk belajar tentang relasi dan
+            fungsi. Dibuat dari pikiran para ahli matematika jenius, ini adalah sumber daya terbaik untuk siswa sekolah
+            menengah pertama!</p>
+          <button type="submit" id="#" style="border-radius: 10px; width: 8rem;">Login</button>
+
+        </div>
+        <div class="col-md-6 right-content"><img src="./assets/images/hero.png" class="img-fluid" alt=""></div>
+      </div>
+    </div>
+    <div class="opt-cnt pb-5 mb-5">
+      <h3 class="display-6 text-center mb-5">Let’s Get Function-al!</h3>
+      <div class="row featurette g-5 d-flex justify-content-center align-items-center">
+        <div class="col-md-6">
+          <div class="card card-inverse d-flex shadow py-5 px-5 bg-success" style="width: 34rem !important;">
+            <div class="card-body">
+              <div class="brd-img d-flex flex-row">
+                <span class="card bg-light" style="height: 2rem !important; width: 2rem !important;"><i
+                    class="bi bi-journal-text text-success text-center fw-bold ms-2 me-2"></i></span>
+                <h4 class="ms-3 mt-1 mb-3 text-white align-items-center">Materi</h4>
+              </div>
+              <p class="text-white">Pembahasan terkait materi relasi dan fungsi.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card card-inverse d-flex shadow py-5 px-5" style="width: 34rem !important;">
+            <div class="card-body">
+              <div class="brd-img d-flex flex-row">
+                <span class="card bg-success" style="height: 2rem !important; width: 2rem !important;"><i
+                    class="bi bi-menu-button-wide-fill text-light text-center fw-bold ms-2 me-2"></i></span>
+                <h4 class="ms-3 mt-1 mb-3 align-items-center">Ujian</h4>
+              </div>
+              <p>Soal Ujian terkait materi Relasi dan Fungsi</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+  <div class="dscr-cnt pb-4 pt-4" style="background-color: rgba(7, 117, 82, 0.5);">
+    <div class="container mt-5 mb-5">
+      <p class="display-5 text-center">Courses was fantastic! It is Master platform for those looking to start a new
+        career about
+        math.</p>
+    </div>
+  </div>
+  <div class="pt-5"></div>
 
   <footer>
     <div class="footer container-fluid position-relative bg-light-radial text-white-50 bg-dark mt-5">
