--- a/signin.html
+++ b/signin.html
@@ -11,8 +11,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
     <script src="https://srv.buysellads.com/ads/CESI627W.json?callback=customJSONPCallback"></script>
 </head>
 
@@ -52,7 +52,8 @@
 
                             <button type="submit" id="login" style="border-radius: 10px;">Login</button>
 
-                            <p class="pt-3 small text-muted text-center">Don't have an account? <a href=" #!" class="link-info">Register
+                            <p class="pt-3 small text-muted text-center">Don't have an account? <a href=" #!"
+                                    class="link-info">Register
                                     here</a></p>
 
                         </form>
@@ -61,8 +62,8 @@
 
                 </div>
                 <div class="img-main-box col-md-6 d-none d-sm-block">
-                    <img src="./assets/images/top-view-composition.jpg" alt="Login image" class="login-img img-responsive"
-                        style="border-radius: 10px;">
+                    <img src="./assets/images/top-view-composition.jpg" alt="Login image"
+                        class="login-img img-responsive" style="border-radius: 10px;">
                 </div>
             </div>
         </div>
