--- a/materifungsi.html
+++ b/materifungsi.html
@@ -34,13 +34,13 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link  active" href="blog.html">Materi</a>
+            <a class="nav-link  active" href="materioutside.html">Materi</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">Ujian</a>
+            <a class="nav-link" href="ujian.html">Ujian</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact Us</a>
+            <a class="nav-link" href="contact-us.html">Contact Us</a>
           </li>
         </ul>
       </div>
