--- a/ujian-page.html
+++ b/ujian-page.html
@@ -34,13 +34,13 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="blog.html">Materi</a>
+            <a class="nav-link" href="materioutside.html">Materi</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link  active" href="about.html">Ujian</a>
+            <a class="nav-link  active" href="ujian.html">Ujian</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact Us</a>
+            <a class="nav-link" href="contact-us.html">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -50,6 +50,7 @@
 
   <div class="container">
     <div class="ujian mt-5 mb-5 pt-5 pb-5">
+      <div class="container" id="ff-compose"></div>
       <button type="submit" id="examp" style="border-radius: 10px; width: 5rem;">Selesai</button>
 
     </div>
@@ -95,6 +96,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.0/jquery.validate.min.js'></script>
   <script src="./assets/js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script async defer src="https://formfacade.com/include/110432519005430407495/form/1FAIpQLSfA3r1c8rTapqRsfYVX-0Fn50kCw_yBPG_JwjgUWP4wnlU6lg/bootstrap.js?div=ff-compose"></script>
   <script>
     const btn = document.getElementById('examp');
     btn.addEventListener('click', function () {
