--- a/ujian.html
+++ b/ujian.html
@@ -34,13 +34,13 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="blog.html">Materi</a>
+            <a class="nav-link" href="materioutside.html">Materi</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link  active" href="about.html">Ujian</a>
+            <a class="nav-link  active" href="ujian.html">Ujian</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact Us</a>
+            <a class="nav-link" href="contact-us.html">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -54,7 +54,7 @@
         <div class="col-md-6 mb-3">
           <h3 class="display-4 fw-bold text-success">Ujian</h3>
           <h3 class="display-6 mb-3">Materi Relasi dan Fungsi</h3>
-          <button type="submit" id="ujian" style="border-radius: 10px; width: 5rem;">Mulai</button>
+          <a href="ujian-page.html"><button type="submit" id="ujian" style="border-radius: 10px; width: 5rem;">Mulai</button></a>
         </div>
         <div class="col-md-6 mb-3">
           <img src="./assets/images/ujian.png" class="img-responsive" alt=""></div>
