--- a/materioutside.html
+++ b/materioutside.html
@@ -34,13 +34,13 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="blog.html">Materi</a>
+            <a class="nav-link active" href="materioutside.html">Materi</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">Ujian</a>
+            <a class="nav-link" href="ujian.html">Ujian</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact Us</a>
+            <a class="nav-link" href="contact-us.html">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -59,7 +59,7 @@
                     <img src="img/relasi.png" alt="Relasi" class="card-img-top" width="400" height="300">
                     <div class="card-body">
                         <h5 class="card-title"><strong>Relasi</strong></h3>
-                        <button class="btn" data-bs-toggle="modal" data-bs-target="#myModal">Lihat</button>
+                        <a href="materirelasi.html"><button class="btn" data-bs-toggle="modal" data-bs-target="#myModal">Lihat</button></a>
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                     <img src="img/relasi.png" alt="Fungsi" class="card-img-top" width="400" height="300">
                     <div class="card-body">
                         <h5 class="card-title"><strong>Fungsi</strong></h3>
-                        <button class="btn" data-bs-toggle="modal" data-bs-target="#myModal">Lihat</button>
+                        <a href="materifungsi.html"><button class="btn" data-bs-toggle="modal" data-bs-target="#myModal">Lihat</button></a>
                     </div>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                     <img src="img/relasi.png" alt="Korespondensi Satu-satu" class="card-img-top" width="400" height="300">
                     <div class="card-body">
                         <h5 class="card-title"><strong>Korespondensi Satu-satu</strong></h3>
-                        <button class="btn" data-bs-toggle="modal" data-bs-target="#myModal">Lihat</button>
+                        <a href="materikorespondensisatu-satu.html"><button class="btn" data-bs-toggle="modal" data-bs-target="#myModal">Lihat</button></a>
                     </div>
                 </div>
             </div>
