--- a/signin.html
+++ b/signin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fungsi dalam Matematika</title>
+    <title>Sign In</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -50,9 +50,9 @@
                                 <!--<a class="forgot pull-right small text-muted" href="#">Forgot Password?</a>-->
                             </div>
 
-                            <button type="submit" id="login" style="border-radius: 10px;">Login</button>
+                            <a href=".html"><button type="submit" id="login" style="border-radius: 10px;">Login</button></a>
 
-                            <p class="pt-3 small text-muted text-center">Don't have an account? <a href=" #!"
+                            <p class="pt-3 small text-muted text-center">Don't have an account? <a href="signup.html"
                                     class="link-info">Register
                                     here</a></p>
 
