--- a/ujian-page.html
+++ b/ujian-page.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fungsi dalam Matematika</title>
+  <title>Ujian Tes</title>
   <link rel="stylesheet" href="./assets/css/style.css" />
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -96,7 +96,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.0/jquery.validate.min.js'></script>
   <script src="./assets/js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script async defer src="https://formfacade.com/include/110432519005430407495/form/1FAIpQLSfA3r1c8rTapqRsfYVX-0Fn50kCw_yBPG_JwjgUWP4wnlU6lg/bootstrap.js?div=ff-compose"></script>
+  <script async defer src="https://formfacade.com/include/110432519005430407495/form/1FAIpQLSc3uPqDcJ1pf-I2JQsMKM8qVTPkl-QedBhvp8UPbbarsDt1oQ/bootstrap.js?div=ff-compose"></script>
   <script>
     const btn = document.getElementById('examp');
     btn.addEventListener('click', function () {
