--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </li>
         </ul>
       </div>
-      <div class="nav-profile justify-content-end"><a href=""><img src="#" alt="..."></a></div>
+      <div class="nav-profile justify-content-end"><a href="userprofile.html"><img src="#" alt="..."></a></div>
     </div>
   </nav>
 
