--- a/materirelasi.html
+++ b/materirelasi.html
@@ -50,7 +50,7 @@
           </li>
         </ul>
       </div>
-      <div class="nav-profile justify-content-end"><a href=""><img src="assets/theme/Jenusa.png" alt="..."></a></div>
+      <div class="nav-profile justify-content-end"><a href="userprofile.html"><img src="assets/theme/Jenusa.png" alt="..."></a></div>
     </div>
   </nav>
 
