--- a/userprofile.html
+++ b/userprofile.html
@@ -37,14 +37,14 @@
             <a class="nav-link" href="materioutside.html">Materi</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="ujian-page.html">Ujian</a>
+            <a class="nav-link" href="ujian.html">Ujian</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact-us.html">Contact Us</a>
           </li>
         </ul>
       </div>
-      <div class="nav-profile justify-content-end"><a href=""><img src="assets/theme/Jenusa.png" alt="..."></a></div>
+      <div class="nav-profile justify-content-end"><a href="userprofile.html"><img src="assets/theme/Jenusa.png" alt="..."></a></div>
     </div>
   </nav>
 
